@@ -1,4 +1,10 @@
+2011-10-05  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclWinInt.h:   Remove tclWinProcs, as it is no longer
+	* generic/tclWin32Dll.c: being used.
+
 2011-10-03  Venkat Iyer <venkat@comit.com>
+
 	* library/tzdata/Africa/Dar_es_Salaam: Update to Olson's tzdata2011k
 	* library/tzdata/Africa/Kampala
 	* library/tzdata/Africa/Nairobi
